--- a/docker/docker-compose.base.yaml
+++ b/docker/docker-compose.base.yaml
@@ -207,6 +207,8 @@ services:
     restart: always
     environment:
       API_URL: http://iii-devops-lite-api:10009/
+      API_WS_URL: http://iii-devops-lite-api:10009/
+      CE_CUSTOM_TITLE: "III DevSecOps Community"
     healthcheck:
       test: curl --fail http://localhost/prod-api/swagger-ui/ || exit 1
       interval: 10s
