--- a/docker/docker-compose.IP.yaml
+++ b/docker/docker-compose.IP.yaml
@@ -11,9 +11,10 @@ services:
         external_url 'http://${IP_ADDR}:${GITLAB_PORT}'
         prometheus_monitoring['enable'] = false
         gitlab_rails['initial_root_password'] = '${GITLAB_ROOT_PASSWORD}'
-        unicorn['worker_processes'] = 2
+        puma['worker_processes'] = 2
         sidekiq['concurrency'] = 9
         gitlab_rails['gitlab_default_projects_features_container_registry'] = false
+        gitlab_rails['monitoring_whitelist'] = ['0.0.0.0/0']
     ports:
       - "${GITLAB_PORT}:${GITLAB_PORT}"
 
@@ -37,17 +38,17 @@ services:
     depends_on:
       - sonarqube-db
 
-  redmine-db:
-    extends:
-      service: redmine-db
-      file: docker/docker-compose.base.yaml
+  # redmine-db:
+  #   extends:
+  #     service: redmine-db
+  #     file: docker/docker-compose.base.yaml
 
-  redmine:
-    extends:
-      service: redmine
-      file: docker/docker-compose.base.yaml
-    depends_on:
-      - redmine-db
+  # redmine:
+  #   extends:
+  #     service: redmine
+  #     file: docker/docker-compose.base.yaml
+  #   depends_on:
+  #     - redmine-db
 
   redis:
     extends:
@@ -74,22 +75,6 @@ services:
         condition: service_started
       iii-devops-lite-db:
         condition: service_healthy
-
-  iii-devops-lite-api-worker:
-    extends:
-      service: iii-devops-lite-api-worker
-      file: docker/docker-compose.base.yaml
-    depends_on:
-      - redis
-      - iii-devops-lite-api
-
-  iii-devops-lite-api-beat:
-    extends:
-      service: iii-devops-lite-api-beat
-      file: docker/docker-compose.base.yaml
-    depends_on:
-      - redis
-      - iii-devops-lite-api
 
   iii-devops-lite-ui:
     extends:
