--- a/.env.example
+++ b/.env.example
@@ -60,6 +60,8 @@ REDMINE_PORT="32748"
 
 III_DB_PORT="31403"
 III_DB_PASSWORD=""
+III_REDIS_PASSWORD=""
+III_SECRET_KEY=""
 
 III_PORT="10009"
 III_ADMIN_LOGIN="{{III_ADMIN_LOGIN}}"
