add minio and update api, ui image version

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,9 @@ volumes:
   redmine-files:
     driver: local
 
+  minio-data:
+    driver: local
+
   iii-devops-lite-db-data:
     driver: local
   iii-devops-lite-file:
