add host mode to get real ip

--- a/docker/docker-compose.IP.yaml
+++ b/docker/docker-compose.IP.yaml
@@ -90,4 +90,6 @@ services:
     labels:
       - "autoheal=true"
     ports:
-      - "80:80"
+      - target: 80
+        published: 80
+        mode: host
