ignore redmine, not implement yet

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,10 +15,10 @@ volumes:
   sonarqube-data:
     driver: local
 
-  redmine-db-data:
-    driver: local
-  redmine-files:
-    driver: local
+  # redmine-db-data:
+  #   driver: local
+  # redmine-files:
+  #   driver: local
 
   minio-data:
     driver: local
