--- a/docker/docker-compose.base.yaml
+++ b/docker/docker-compose.base.yaml
@@ -94,6 +94,7 @@ services:
       - "gitlab-config:/etc/gitlab"
       - "gitlab-logs:/var/log/gitlab"
       - "gitlab-data:/var/opt/gitlab"
+    shm_size: '256m'
     healthcheck:
       disable: false
 
