✨ Update to v3 api

--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,8 @@ PORT_SONARQUBE="31910"
 PORT_III_DATABASE="31403"
 PORT_III_API="10009"
 PORT_III_UI="80"
+PORT_MINIO="9000"
+PORT_MINIO_CONSOLE="9001"
 
 # Tokens
 REDMINE_API_KEY=""
@@ -58,8 +60,15 @@ SQ_PORT="31910"
 REDMINE_DB_PASSWORD=""
 REDMINE_PORT="32748"
 
+MINIO_ACCESS_KEY="{{PASSWORD}}"
+MINIO_SECRET_KEY="{{PASSWORD}}"
+MINIO_PORT="9000"
+MINIO_CONSOLE_PORT="9001"
+
 III_DB_PORT="31403"
 III_DB_PASSWORD=""
+III_REDIS_PASSWORD=""
+III_SECRET_KEY=""
 
 III_PORT="10009"
 III_ADMIN_LOGIN="{{III_ADMIN_LOGIN}}"
@@ -70,6 +79,7 @@ IP_ADDR="{{IP_ADDR}}"
 GITLAB_URL="http://$IP_ADDR:$GITLAB_PORT"
 SQ_URL="http://$IP_ADDR:$SQ_PORT"
 REDMINE_URL="http://$IP_ADDR:$REDMINE_PORT"
+MINIO_URL="http://$IP_ADDR:$MINIO_PORT"
 
 # For rootless docker
 #   Get it via: echo "${XDG_RUNTIME_DIR}/docker.sock"
