--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,9 +15,12 @@ volumes:
   sonarqube-data:
     driver: local
 
-  redmine-db-data:
-    driver: local
-  redmine-files:
+  # redmine-db-data:
+  #   driver: local
+  # redmine-files:
+  #   driver: local
+
+  minio-data:
     driver: local
 
   iii-devops-lite-db-data:
